--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy>=1.26.0
-opencv-python-headless>=4.8.0
+numpy==1.26.0
+opencv-python-headless==4.8.0.76
 scikit-learn==1.3.0
-Flask>=2.3.3
-pandas>=2.1.0
-matplotlib>=3.8.0
-seaborn>=0.13.0
-Pillow>=10.0.0
-gunicorn>=21.2.0
-Werkzeug>=2.3.7
-scipy>=1.11.3
+Flask==2.3.3
+pandas==2.1.0
+matplotlib==3.8.0
+seaborn==0.13.0
+Pillow==10.0.0
+gunicorn==21.2.0
+Werkzeug==2.3.7
+scipy==1.11.3
